--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello Ash Jacobson
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> CSCE 190: Ash Jacobson</title>
+    </head>
+    <body>
+        <h1>Ash Jacobson's CSCE 190 Site</h1>
+
+        <section class="assignment">
+            <a href="Files/ProblemStatement.pdf"><img src="Images/ProblemStatement.png"></a>
+            <section class="ass-details">
+                <a href="Files/ProblemStatement.pdf"><h2>Problem Statement: Apple Music Customization</h2></a>
+                <p>
+                    Apple users all around the world love listening to new music during their free time, so it would be great if they could customize and rearrange their Apple music homepage. Our solution should give apple music users the comfort of listening to music by their way of setting and rearranging it up.
+
+                </p>
+            </section>
+        </section>
+    </body>
+</html>
