--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
         <section class="assignment">
             <a href="Files/ProblemStatement.pdf"><img src="Images/ProblemStatement.png"></a>
             <section class="ass-details">
-                <a href="Files/ProblemStatement.pdf"><h2>Problem Statement: Apple Music Customization</h2></a>
+                <a href="Files/ProblemStatement.pdf"><h2>Problem Statement: Jibit Jam: A Croc Visualizer</h2></a>
                 <p>
-                    Apple users all around the world love listening to new music during their free time, so it would be great if they could customize and rearrange their Apple music homepage. Our solution should give apple music users the comfort of listening to music by their way of setting and rearranging it up.
+                    We all love crocs™ brand shoes, but it's hard to see what your jibbitz will look like on the shoes until after you buy them. Our solution is to allow users to visualize their crocs with their desired jibbitz before buying them.
+                </p>
+            </section>
+        </section>
 
+        <section class="assignment">
+            <a href="Files/StickyNotes.pdf"><img src="Images/StickyNotes.png"></a>
+            <section class="ass-details">
+                <a href="Files/StickyNotes.pdf"><h2>Affinity Diagram: Jibit Jam: A Croc Visualizer</h2></a>
+                <p>
+                    Our notes are the stickiest in the land, you will never find notes as sticky as ours. They are world renound, praised around the globe. Some of them even have words on them!
                 </p>
             </section>
         </section>
