--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> CSCE 190: Ash Jacobson</title>
-        <link rel="stylesheet" href="styles.css"
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Ash Jacobson's CSCE 190 Site</h1>
