--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
             </section>
         </section>
 
+
+        
+        <section class="assignment">
+            <a href="Files/Personas.pdf"><img src="Images/personas.png"></a>
+            <section class="ass-details">
+                <a href="Files/Personas.pdf"><h2>Personas: Our Prime Demographic</h2></a>
+                <p>
+                    As seen in the image above these individuals LOVE Crocs and jibbitz alike, they are the perfect (completly real) group of individuals who love our services.
+                </p>
+            </section>
+        </section>
+
+
+
+
         <section class="assignment">
             <a href="Files/StickyNotes.pdf"><img src="Images/StickyNotes.png"></a>
             <section class="ass-details">
