--- a/index.html
+++ b/index.html
@@ -51,5 +51,16 @@
             </section>
         </section>   
         
+        <section class="assignment">
+            <a href="Files/Sketches.pdf"><img src="Images/Sketch.PNG"></a>
+            <section class="ass-details">
+                <a href="Files/Sketches.pdf"><h2>Sketches: Our app begins its visualization stage</h2></a>
+                <p>
+                    Isn't it beautiful, our app has been rendered in gorgeous resolution, at least 420p!
+                </p>
+            </section>
+        </section>   
+
+
     </body>
 </html>
