--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
                     Isn't it good enough, our app has been rendered in paper, at least one tree killed!
                 </p>
             </section>   
+
+            <section class="assignment">
+                <a href="https://scratch.mit.edu/projects/763596498/"><h2>Hi-Fi Prototype: It's done, we did it.</h2></a>
+                <a href="https://scratch.mit.edu/projects/763596498/"><img src="Images/hi-fi.png"></a>
+                <p>
+                    We did it on scratch, peak coding language.
+                </p>
+            </section>  
+            
         </div>
 
     </body>
