--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Ash Jacobson's CSCE 190 Site</h1>
 
-     <div class="assingments">
+     <div class="assignments">
         <section class="assignment">
                 <a href="Files/ProblemStatement.pdf"><h2>Problem Statement: Jibit Jam: A Croc Visualizer</h2></a>
                 <a href="Files/ProblemStatement.pdf"><img src="Images/ProblemStatement.png"></a>
