--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             </section>   
 
             <section class="assignment">
-                <a href="https://scratch.mit.edu/projects/763596498/"><h2>Hi-Fi Prototype: It's done, we did it.</h2></a>
-                <a href="https://scratch.mit.edu/projects/763596498/"><img src="Images/hi-fi.png"></a>
+                <a href="https://scratch.mit.edu/projects/763596498/fullscreen/"><h2>Hi-Fi Prototype: It's done, we did it.</h2></a>
+                <a href="https://scratch.mit.edu/projects/763596498/fullscreen/"><img src="Images/hi-fi.png"></a>
                 <p>
                     We did it on scratch, peak coding language.
                 </p>
